tests/list/out_of_range.ca


int = make_stack({
    l = []
    l[0]})

int.run

assert(int.errored)
